--- a/commonlib/src/main/res/layout/loading_view.xml
+++ b/commonlib/src/main/res/layout/loading_view.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/FF00000000"
-              android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/FF00000000"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +25,7 @@
                 android:layout_gravity="center"
                 android:indeterminateTint="@color/FD9B21"
                 android:indeterminateTintMode="src_atop"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_tip"
@@ -38,12 +37,12 @@
                 android:text="@string/please_later"
                 android:textColor="@color/FD9B21"
                 android:textSize="12sp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <RelativeLayout
-                android:layout_centerInParent="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
 
                 <ImageView
                     android:id="@+id/iv_tip"
@@ -51,7 +50,7 @@
                     android:layout_height="200dp"
                     android:layout_centerHorizontal="true"
                     android:src="@mipmap/img_error"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/tv_error_tip"
@@ -63,27 +62,28 @@
                     android:text="@string/no_net"
                     android:textColor="#B5B5C0"
                     android:textSize="12sp"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
-                <com.app.common.commonwidget.roundview.RoundTextView
+                <TextView
                     android:id="@+id/rtv_retry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_error_tip"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/x100"
-                    android:layout_marginBottom="@dimen/x50"
+                    android:layout_marginTop="33dp"
+                    android:layout_marginBottom="16dp"
                     android:includeFontPadding="false"
-                    android:paddingBottom="@dimen/x20"
-                    android:paddingLeft="@dimen/x80"
-                    android:paddingRight="@dimen/x80"
-                    android:paddingTop="@dimen/x20"
+                    android:paddingStart="26dp"
+                    android:paddingTop="6dp"
+                    android:paddingEnd="26dp"
+                    android:paddingBottom="7dp"
                     android:text="@string/click_retry"
                     android:textColor="@color/FFFFFF"
                     android:textSize="14sp"
-                    android:visibility="visible"
+                    android:visibility="visible" />
+                <!--
                     app:rv_backgroundColor="@color/FD9B21"
-                    app:rv_cornerRadius="@dimen/x40"/>
+                    app:rv_cornerRadius="14dp"-->
             </RelativeLayout>
         </RelativeLayout>
 
@@ -91,7 +91,7 @@
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
 
